@@ -17,7 +17,10 @@ Imports:
     utils, 
     tools, 
     assertthat (>= 0.1),
-    getPass (>= 0.1-0)
+    getPass (>= 0.1-0),
+    graphics,
+    grDevices,
+    png (>= 2.9.0)
 Suggests: 
     knitr, 
     rmarkdown, 
