@@ -2,6 +2,9 @@
 
 export(c2s)
 export(client)
+export(dev.curc)
+export(dev.newc)
+export(dev.offc)
 export(evalc)
 export(exit)
 export(has.sodium)
@@ -9,6 +12,7 @@ export(is.secure)
 export(lsc)
 export(relay)
 export(rmc)
+export(rrpng)
 export(s2c)
 export(server)
 export(showlog)
